--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Archivo+Black&family=Poppins&display=swap');
 
 body {
+  scroll-behavior: smooth;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
